Added some validations for signup
