# api/docs/swagger.json
@@ -300,6 +300,10 @@
                 "last_name": {
                     "type": "string",
                     "example": "Familiya"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "Password@"
                 }
             }
         },
